--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
 					<li><a href="categories.html" target="_blank">Blog</a></li>
 					<li><a href="community.html" target="_blank">Forums</a></li>
 					<li><a href="contact.html" target="_blank">Contact</a></li>
+					<li><div class="user-panel">
+				<a href="login.html" target="_blank">Login</a>  /  <a href="login.html" target="_blank">Register</a>
+			</div></li>
 				</ul>
 			</nav>
 			
