--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			<!-- site menu -->
 			<nav class="main-menu">
 				<ul>
-					<li><a href="index.html">Home</a></li>
+					<li><a href="index.html">index</a></li>
 					<li><a href="review.html" target="_blank">Games</a></li>
 					<li><a href="categories.html" target="_blank">Blog</a></li>
 					<li><a href="community.html" target="_blank">Forums</a></li>
