--- a/review.html
+++ b/review.html
@@ -298,25 +298,25 @@
 							<div class="lb-item">
 								<div class="lb-thumb set-bg" data-setbg="img/latest-blog/1.jpg"></div>
 								<div class="lb-content">
-									<div class="lb-date">June 21, 2018</div>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum </p>
-									<a href="#" class="lb-author">By Admin</a>
+									<div class="lb-date">June 21, 2023</div>
+									<p>Game coming soon</p>
+									<a href="#" class="lb-author">By Admin:Neeraj Dhiman</a>
 								</div>
 							</div>
 							<div class="lb-item">
 								<div class="lb-thumb set-bg" data-setbg="img/latest-blog/2.jpg"></div>
 								<div class="lb-content">
-									<div class="lb-date">June 21, 2018</div>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum </p>
-									<a href="#" class="lb-author">By Admin</a>
+									<div class="lb-date">June 21, 2023</div>
+									<p>Gaming cooming soon  </p>
+									<a href="#" class="lb-author">By Admin:Neeraj Dhiman</a>
 								</div>
 							</div>
 							<div class="lb-item">
 								<div class="lb-thumb set-bg" data-setbg="img/latest-blog/3.jpg"></div>
 								<div class="lb-content">
-									<div class="lb-date">June 21, 2018</div>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum </p>
-									<a href="#" class="lb-author">By Admin</a>
+									<div class="lb-date">June 21, 2023</div>
+									<p>Game coming soon </p>
+									<a href="#" class="lb-author">By Admin:Neeraj Dhiman</a>
 								</div>
 							</div>
 						</div>
@@ -327,31 +327,31 @@
 						<h4 class="fw-title">Top Comments</h4>
 						<div class="top-comment">
 							<div class="tc-item">
-								<div class="tc-thumb set-bg" data-setbg="img/authors/1.jpg"></div>
+								<div class="tc-thumb set-bg" data-setbg="neeraj.ico"></div>
 								<div class="tc-content">
-									<p><a href="#">James Smith</a> <span>on</span>  Lorem ipsum dolor sit amet, co</p>
-									<div class="tc-date">June 21, 2018</div>
+									<p><a href="#">Neeraj</a> <span>on</span>  Best Game neeraj bro</p>
+									<div class="tc-date">June 21, 2023</div>
 								</div>
 							</div>
 							<div class="tc-item">
-								<div class="tc-thumb set-bg" data-setbg="img/authors/2.jpg"></div>
+								<div class="tc-thumb set-bg" data-setbg="neeraj.ico"></div>
 								<div class="tc-content">
-									<p><a href="#">James Smith</a> <span>on</span>  Lorem ipsum dolor sit amet, co</p>
-									<div class="tc-date">June 21, 2018</div>
+									<p><a href="#">Vansh</a> <span>on</span>  Best Game neeraj bro</p>
+									<div class="tc-date">June 21, 2023</div>
 								</div>
 							</div>
 							<div class="tc-item">
-								<div class="tc-thumb set-bg" data-setbg="img/authors/3.jpg"></div>
+								<div class="tc-thumb set-bg" data-setbg="neeraj.ico"></div>
 								<div class="tc-content">
-									<p><a href="#">James Smith</a> <span>on</span>  Lorem ipsum dolor sit amet, co</p>
-									<div class="tc-date">June 21, 2018</div>
+									<p><a href="#">Sumit</a> <span>on</span>  Best Game neeraj bro</p>
+									<div class="tc-date">June 21, 2023</div>
 								</div>
 							</div>
 							<div class="tc-item">
-								<div class="tc-thumb set-bg" data-setbg="img/authors/4.jpg"></div>
+								<div class="tc-thumb set-bg" data-setbg="neeraj.ico"></div>
 								<div class="tc-content">
-									<p><a href="#">James Smith</a> <span>on</span>  Lorem ipsum dolor sit amet, co</p>
-									<div class="tc-date">June 21, 2018</div>
+									<p><a href="#">Yash</a> <span>on</span>  Best Game neeraj bro</p>
+									<div class="tc-date">June 21, 2023</div>
 								</div>
 							</div>
 						</div>
