--- a/index.html
+++ b/index.html
@@ -41,10 +41,16 @@
 			<!-- logo -->
 			<a class="site-logo" href="index.html">
 				
-				<img id="" src="img/logo.png" alt="logo coming soon">
+				<img id="neerajdhiman" src="neeraj.ico" alt="logo coming soon">
 				<br>
 				<br>
-				
+				<style>
+					#neerajdhiman{
+                                                                height: 50px;
+								 width: 50px;
+								  border-radius: 50px;
+					}
+					</style>
 				<div class="rating">
 					<h4>Rate This Website</h4>	<input type="radio" id="star-1" name="star-radio" value="star-1">
 					<label for="star-1">
@@ -67,7 +73,9 @@
 					  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path pathLength="360" d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"></path></svg>
 					</label>
 				  </div>
-				<li><a href="review.html" target="_blank" id="vfx">Games</a></li>
+				<li><a href="review.html" target="_blank" id="vfx">Games</a></li><br><h4>
+					Full Website Update on 01/june/2024
+				</h4>
 			</a>
 			<div class="user-panel">
 				<a href="login.html" target="_blank">Login</a>  /  <a href="login.html" target="_blank">Register</a>
