--- a/review.html
+++ b/review.html
@@ -66,9 +66,9 @@
 		<div class="ln-title">Latest News</div>
 		<div class="news-ticker">
 			<div class="news-ticker-contant">
-				<div class="nt-item"><span class="new">new</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </div>
-				<div class="nt-item"><span class="strategy">strategy</span>Isum dolor sit amet, consectetur adipiscing elit. </div>
-				<div class="nt-item"><span class="racing">racing</span>Isum dolor sit amet, consectetur adipiscing elit. </div>
+				<div class="nt-item"><span class="new">new</span>Neeraj Dhiman </div>
+				<div class="nt-item"><span class="strategy">strategy</span>Vansh Dhiman </div>
+				<div class="nt-item"><span class="racing">racing</span> Dhiman Sabh </div>
 			</div>
 		</div>
 	</div>
@@ -98,7 +98,7 @@
 				<div class="col-md-6">
 					<div class="review-item">
 						<div class="review-cover set-bg" data-setbg="img/review/5.jpg">
-							<div class="score yellow" link="">Play</div>
+							<h1><a href="https://cdn.htmlgames.com/TripleTiles/" id="Ram"> Play </a></h1>
 						</div>
 						<div class="review-text">
 							<h4>Overwatch Halloween</h4>
@@ -109,21 +109,24 @@
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star is-fade"></i>
 							</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame. Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<p>Rotate your Phone and then play Games</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="review-item">
 						<div class="review-cover set-bg" data-setbg="img/review/6.jpg">
-							<button onclick="window.location.href=' https://bit.ly/king-kong-kart-racing';" id="game">
-								Play
-							  </button>
+							<h1><a href="https://cdn.htmlgames.com/TokyoHiddenObjects/" id="Ram"> Play </a></h1>
 							<style>
 								#game{
 									background-color: yellow;
 									border-radius: 200px;
 								}
+
+								#Ram{
+		background-color: black;
+		border-radius: 20px;
+	}
 							</style>
 						</div>
 						<div class="review-text">
@@ -135,14 +138,15 @@
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star is-fade"></i>
 							</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame. Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<p>Rotate your Phone and then play Games</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="review-item">
 						<div class="review-cover set-bg" data-setbg="img/review/7.jpg">
-							<div class="score yellow">9.3</div>
+							<h1><a href="https://cdn.htmlgames.com/PirateMysteries/" id="Ram"> Play </a></h1>
+								
 						</div>
 						<div class="review-text">
 							<h4>Avatar</h4>
@@ -153,14 +157,15 @@
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star is-fade"></i>
 							</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame. Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<p>Rotate your Phone and then play Games</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="review-item">
 						<div class="review-cover set-bg" data-setbg="img/review/8.jpg">
-							<div class="score yellow">9.3</div>
+							<h1><a href="https://cdn.htmlgames.com/SpikeSolitaire/" id="Ram"> Play </a></h1>
+
 						</div>
 						<div class="review-text">
 							<h4>Anthem</h4>
@@ -171,14 +176,18 @@
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star is-fade"></i>
 							</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame. Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<p>Rotate your Phone and then play Games</p>
+
+							
+
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="review-item">
 						<div class="review-cover set-bg" data-setbg="img/review/9.jpg">
-							<div class="score yellow">9.3</div>
+							<h1><a href="https://cdn.htmlgames.com/ChenonceauHiddenObjects/" id="Ram"> Play </a></h1>
+
 						</div>
 						<div class="review-text">
 							<h4>Cyberpunk 2077</h4>
@@ -189,14 +198,16 @@
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star is-fade"></i>
 							</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame. Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<p>Rotate your Phone and then play Games</p>
+
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="review-item">
 						<div class="review-cover set-bg" data-setbg="img/review/10.jpg">
-							<div class="score yellow">9.3</div>
+							<h1><a href="https://cdn.htmlgames.com/CountryLabyrinth3/" id="Ram"> Play </a></h1>
+
 						</div>
 						<div class="review-text">
 							<h4>Spiderman</h4>
@@ -207,13 +218,16 @@
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star is-fade"></i>
 							</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame. Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<p>Rotate your Phone and then play Games</p>
+
+
+
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="text-center pt-4">
-				<button class="site-btn btn-sm">Load More</button>
+				<button class="site-btn btn-sm" href="https://bit.ly/king-kong-kart-racing';">Load More</button>
 			</div>
 		</div>
 	</section>
@@ -235,7 +249,7 @@
 						</div>
 						<div class="review-text">
 							<h5>Assasin’’s Creed</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<p></p>
 						</div>
 					</div>
 				</div>
@@ -246,7 +260,7 @@
 						</div>
 						<div class="review-text">
 							<h5>Doom</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<p></p>
 						</div>
 					</div>
 				</div>
@@ -257,7 +271,7 @@
 						</div>
 						<div class="review-text">
 							<h5>Overwatch</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<p></p>
 						</div>
 					</div>
 				</div>
@@ -268,7 +282,7 @@
 						</div>
 						<div class="review-text">
 							<h5>GTA</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<p></p>
 						</div>
 					</div>
 				</div>
@@ -288,7 +302,7 @@
 				<div class="col-lg-4">
 					<div class="footer-logo text-white">
 						<img src="img/footer-logo.png" alt="">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+						<p></p>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6">
@@ -298,25 +312,25 @@
 							<div class="lb-item">
 								<div class="lb-thumb set-bg" data-setbg="img/latest-blog/1.jpg"></div>
 								<div class="lb-content">
-									<div class="lb-date">June 21, 2023</div>
-									<p>Game coming soon</p>
-									<a href="#" class="lb-author">By Admin:Neeraj Dhiman</a>
+									<div class="lb-date">June 21, 2018</div>
+									<p>Game coming soon </p>
+									<a href="#" class="lb-author">By Admin</a>
 								</div>
 							</div>
 							<div class="lb-item">
 								<div class="lb-thumb set-bg" data-setbg="img/latest-blog/2.jpg"></div>
 								<div class="lb-content">
-									<div class="lb-date">June 21, 2023</div>
-									<p>Gaming cooming soon  </p>
-									<a href="#" class="lb-author">By Admin:Neeraj Dhiman</a>
+									<div class="lb-date">June 21, 2018</div>
+									<p>Game coming soon </p>
+									<a href="#" class="lb-author">By Admin</a>
 								</div>
 							</div>
 							<div class="lb-item">
 								<div class="lb-thumb set-bg" data-setbg="img/latest-blog/3.jpg"></div>
 								<div class="lb-content">
-									<div class="lb-date">June 21, 2023</div>
+									<div class="lb-date">June 21, 2018</div>
 									<p>Game coming soon </p>
-									<a href="#" class="lb-author">By Admin:Neeraj Dhiman</a>
+									<a href="#" class="lb-author">By Admin</a>
 								</div>
 							</div>
 						</div>
@@ -329,29 +343,29 @@
 							<div class="tc-item">
 								<div class="tc-thumb set-bg" data-setbg="neeraj.ico"></div>
 								<div class="tc-content">
-									<p><a href="#">Neeraj</a> <span>on</span>  Best Game neeraj bro</p>
-									<div class="tc-date">June 21, 2023</div>
+									<p><a href="#">Neeraj Dhiman</a> <span>on</span> Best Games</p>
+									<div class="tc-date">June 21, 2018</div>
 								</div>
 							</div>
 							<div class="tc-item">
 								<div class="tc-thumb set-bg" data-setbg="neeraj.ico"></div>
 								<div class="tc-content">
-									<p><a href="#">Vansh</a> <span>on</span>  Best Game neeraj bro</p>
-									<div class="tc-date">June 21, 2023</div>
+									<p><a href="#">Neeraj Dhiman</a> <span>on</span> Best Games</p>
+									<div class="tc-date">June 21, 2018</div>
 								</div>
 							</div>
 							<div class="tc-item">
 								<div class="tc-thumb set-bg" data-setbg="neeraj.ico"></div>
 								<div class="tc-content">
-									<p><a href="#">Sumit</a> <span>on</span>  Best Game neeraj bro</p>
-									<div class="tc-date">June 21, 2023</div>
+									<p><a href="#">Neeraj Dhiman</a> <span>on</span> Best Games</p>
+									<div class="tc-date">June 21, 2018</div>
 								</div>
 							</div>
 							<div class="tc-item">
 								<div class="tc-thumb set-bg" data-setbg="neeraj.ico"></div>
 								<div class="tc-content">
-									<p><a href="#">Yash</a> <span>on</span>  Best Game neeraj bro</p>
-									<div class="tc-date">June 21, 2023</div>
+									<p><a href="#">Neeraj Dhiman</a> <span>on</span> Best Games</p>
+									<div class="tc-date">June 21, 2018</div>
 								</div>
 							</div>
 						</div>
