--- a/index.html
+++ b/index.html
@@ -2410,7 +2410,7 @@ h4{
 				<div class="col-lg-4">
 					<div class="footer-logo text-white">
 						<img src="img/footer-logo.png" alt="">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+						<p>Neeraj Dhiman</p>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6">
