--- a/index.html
+++ b/index.html
@@ -2186,7 +2186,7 @@ h4{
 					<div class="feature-item set-bg" data-setbg="img/features/1.jpg">
 						
 						<div class="fi-content text-white">
-							<h1><a href="https://bit.ly/king-kong-kart-racing';" id="Ram">Play</a></h1>
+							<h1><a href="https://cdn.htmlgames.com/DropTris/" id="Ram">Play</a></h1>
 							<p>Rotate Your phone and paly Games</p>
 							<a href="#" class="fi-comment">3 Comments</a>
 						</div>
@@ -2196,7 +2196,7 @@ h4{
 					<div class="feature-item set-bg" data-setbg="img/features/2.jpg">
 						
 						<div class="fi-content text-white">
-							<h1><a href="https://cdn.htmlgames.com/FunfairMysteries/" id="Ram">Play</a></h1>
+							<h1><a href="https://cdn.htmlgames.com/TrafficRacer2/" id="Ram">Play</a></h1>
 							<p>Rotate Your phone and paly Games</p>
 							<a href="#" class="fi-comment">3 Comments</a>
 						</div>
@@ -2205,7 +2205,7 @@ h4{
 				<div class="col-lg-3 col-md-6 p-0">
 					<div class="feature-item set-bg" data-setbg="img/features/3.jpg">
 \						<div class="fi-content text-white">
-							<h1><a href="https://cdn.htmlgames.com/BubbleBuster/" id="Ram"> Play </a></h1>
+							<h1><a href="https://cdn.htmlgames.com/AirportSniper/" id="Ram"> Play </a></h1>
 							<p>Rotate Your phone and paly Games </p>
 							<a href="#" class="fi-comment">3 Comments</a>
 						</div>
@@ -2214,7 +2214,7 @@ h4{
 				<div class="col-lg-3 col-md-6 p-0">
 					<div class="feature-item set-bg" data-setbg="img/features/4.jpg">
 						<div class="fi-content text-white">
-							<h1><a href="https://cdn.htmlgames.com/SantaTripeaks/" id="Ram"> Play </a></h1>
+							<h1><a href="https://cdn.htmlgames.com/BigParking/" id="Ram"> Play </a></h1>
 							<p>Rotate Your phone and paly Games </p>
 							<a href="#" class="fi-comment">3 Comments</a>
 						</div>
@@ -2247,7 +2247,7 @@ h4{
 							<div class="cata new">new</div>
 						</div>
 						<div class="rgi-content">
-							<h1><a href="https://cdn.htmlgames.com/ChristmasDimensions/" id="Ram"> Play </a></h1>
+							<h1><a href="https://cdn.htmlgames.com/TrafficRacer/" id="Ram"> Play </a></h1>
 							<p> Rotate your Phone and then play Games</p>
 							<a href="#" class="comment">3332 Comments</a>
 							<div class="rgi-extra">
@@ -2263,7 +2263,7 @@ h4{
 							<div class="cata racing">racing</div>
 						</div>
 						<div class="rgi-content">
-							<h1><a href="https://cdn.htmlgames.com/ThievesOfEgyptSolitaire/" id="Ram"> Play </a></h1>
+							<h1><a href="https://cdn.htmlgames.com/GalaxyShooter/" id="Ram"> Play </a></h1>
 							<p>Rotate your Phone and then play Games</p>
 							<a href="#" class="comment">3655 Comments</a>
 							<div class="rgi-extra">
@@ -2279,7 +2279,7 @@ h4{
 							<div class="cata adventure">Adventure</div>
 						</div>
 						<div class="rgi-content">
-							<h1><a href="https://cdn.htmlgames.com/JungleLink/" id="Ram"> Play </a></h1>
+							<h1><a href="https://cdn.htmlgames.com/SoldierAttack2/" id="Ram"> Play </a></h1>
 							<p>Rotate your Phone and then play Games</p>
 							<a href="#" class="comment">3534 Comments</a>
 							<div class="rgi-extra">
@@ -2306,7 +2306,7 @@ h4{
 						<div class="ti-content">
 							<div class="ti-thumb set-bg" data-setbg="img/tournament/1.jpg"></div>
 							<div class="ti-text">
-								<h1><a href="https://cdn.htmlgames.com/RotatePuzzleCatsAndDogs/" id="Ram"> Play </a></h1>
+								<h1><a href="https://cdn.htmlgames.com/NinjaDarts/" id="Ram"> Play </a></h1>
 								<ul>
 									<li><span>Tournament Beggins:</span> June 20, 2018</li>
 									<li><span>Tounament Ends:</span> July 01, 2018</li>
@@ -2324,7 +2324,7 @@ h4{
 						<div class="ti-content">
 							<div class="ti-thumb set-bg" data-setbg="img/tournament/2.jpg"></div>
 							<div class="ti-text">
-								<h1><a href="https://cdn.htmlgames.com/TokyoHiddenObjects/" id="Ram"> Play </a></h1>
+								<h1><a href="https://cdn.htmlgames.com/Bowling/" id="Ram"> Play </a></h1>
 								<ul>
 									<li><span>Tournament Beggins:</span> June 20, 2018</li>
 									<li><span>Tounament Ends:</span> July 01, 2018</li>
