--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
 					  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path pathLength="360" d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"></path></svg>
 					</label>
 				  </div>
-				<li><a href="review.html" target="_blank" id="vfx">Games</a></li><br><h4>
-					Full Website Update on 01/june/2024
+				
 				</h4>
 			</a>
 			<div class="user-panel">
@@ -87,15 +86,27 @@
 				<i class="fa fa-bars"></i>
 			</div>
 			<!-- site menu -->
-			<nav class="main-menu">
-				<ul>
-					<li><a href="login.html" target="_blank">Login</a></li>
-					<li><a href="review.html" target="_blank">Games</a></li>
-					<li><a href="categories.html" target="_blank">Blog</a></li>
-					<li><a href="community.html" target="_blank">Forums</a></li>
-					<li><a href="contact.html" target="_blank">Contact</a></li>
-				</ul>
-			</nav>
+				<footer class="footer-section">
+				<div id="llll">
+					<ul class="footer-menu">
+						<li><a href="index.html" target="_blank">Home</a></li>
+						<li><a href="review.html" target="_blank">Games</a></li>
+						<li><a href="categories.html" target="_blank">Blog</a></li>
+						<li><a href="community.html" target="_blank">Forums</a></li>
+						<li><a href="contact.html" target="_blank">Contact</a></li>
+			<style>
+				.footer-section{
+					background-color: #3faeb2;
+					text-align: center;
+					justify-content: center;
+					border-radius: 80px;
+					display: flex;
+					color: #000000;
+				}
+				.llll{
+					color: #000000;
+				}
+				</style>
 			
 		</div>
 	</header>
