--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<div class="rating">
 					
 					
-					<h4>Rate This Website</h4>	<input type="radio" id="star-1" name="star-radio" value="star-1">
+						<input type="radio" id="star-1" name="star-radio" value="star-1">
 					<label for="star-1">
 					  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path pathLength="360" d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"></path></svg>
 					</label>
