Update and rename index.html to one.html

--- a/one.html
+++ b/one.html
@@ -89,14 +89,14 @@
 				<footer class="footer-section">
 				<div id="llll">
 					<ul class="footer-menu">
-						<li><a href="index.html" target="_blank">Home</a></li>
+						<li><a href="one.html" target="_blank">Home</a></li>
 						<li><a href="review.html" target="_blank">Games</a></li>
 						<li><a href="categories.html" target="_blank">Blog</a></li>
 						<li><a href="community.html" target="_blank">Forums</a></li>
 						<li><a href="contact.html" target="_blank">Contact</a></li>
 			<style>
 				.footer-section{
-					background-color: #3faeb2;
+					background-color: #ff0000;
 					text-align: center;
 					justify-content: center;
 					border-radius: 80px;
@@ -170,7 +170,7 @@
 	<section class="hero-section">
 		<div class="hero-slider owl-carousel">
 			
-			<div class="hs-item set-bg" data-setbg="img/slider-1.jpg">
+			<div class="hs-item set-bg" data-setbg="img/slider-2.jpg">
 				<div class="hs-text">
 					<div class="container">
 						<div class="main">
@@ -2169,6 +2169,10 @@ h4{
     justify-content: right;
 	box-sizing: border-box;
 }
+.feature-section{
+	background-color: #59ff00;
+}
+
 
 	</style>
 	
@@ -2190,7 +2194,7 @@ h4{
 
 
 	<!-- Feature section -->
-	<section class="feature-section spad">
+	<section class="feature-section">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-3 col-md-6 p-0">
@@ -2239,6 +2243,9 @@ h4{
 			color: black;
 			background-color: yellow;
 			border-radius: 20px;
+		}
+		.section-title{
+			background-color: #ff4000;
 		}
 	</style>
 	<!-- Feature section end -->
@@ -2494,7 +2501,7 @@ h4{
 		</div>
 	</section>
 	<!-- Footer top section end -->
-
+          
 	
 	<!-- Footer section -->
 	<footer class="footer-section">
